bin/tests/errors/sema/sema_err_array_dim_negative.swg
#global fileprivate

var I: [-1] s32     // swc-expected-error {{sema_err_array_dim_negative}}
